# save-claude-code

./: .gitignore  CLAUDE.md  SETUP_MAC.md  bootstrap.sh  settings.json  statusline.sh  사용법.md
1구글SEO/: CLAUDE.md
2SaaS/VC/: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
2SaaS/VC/.claude/: README.md
2SaaS/VC/.claude/agents/: value-chain-onboarding.md
2SaaS/VC/.claude/commands/: 온보딩-배치.md  온보딩.md
2SaaS/VC/.claude/skills/: README.md
2SaaS/VC/data/historical_cases/: README.md  chicken_suwon_2024q4.json  pasta_anseong_2025q1.json
2SaaS/VC/data/references/: 목표매출_산정로직.md
2SaaS/VC/data/rules/: suggestions.yaml
2SaaS/VC/data/samples/: 대흥육회_menu_plan.json  더피플버거_sample.json  (+1 more)
2SaaS/VC/docs/: DOCX_SPEC.md  KAKAO_INBOX_PHASE1_PoC.md  baemin_write_api_feasibility.md  delivery_platforms_write_feasibility.md  external_tools_scan.md  generalization_and_saas_potential.md  솔루션_판단_규칙.md  피드백_DOCX_비교분석.md  피드백_XLSX_비교분석.md
2SaaS/VC/prompts/: solution_planning.md
2SaaS/VC/src/: orchestrator.py  pipeline.py
2SaaS/VC/tasks/: lessons.md  meeting-brief-2026-04-16.md  todo.md
2SaaS/VC/tests/: test_agent_md_references.py  test_case_engine.py  test_docx_builder.py  test_e2e_pipeline.py  test_historical_cases.py  test_lever_analysis.py  test_lever_benchmarks.py  test_option_parser.py  test_rationale_xlsx.py  test_reference_check.py  test_season_factor.py  test_shop_info_parser.py  test_solution_builder_integrates_cases.py  test_tam_estimator.py  test_target_revenue.py  test_target_revenue_historical.py  test_ugk_impression_parser.py  test_validator.py  test_xlsx_builder.py
(+796 files in other folders)
